--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "dependencies": {
     "@types/koa": "^2.13.5",
+    "@types/passport-http": "^0.3.9",
     "body-parser": "^1.20.1",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
-    "koa-router": "^12.0.0"
+    "koa-passport": "^6.0.0",
+    "koa-router": "^12.0.0",
+    "passport-http": "^0.3.0",
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.29.0"
   }
 }
